apps/web/src/app/(docs)/mintlify-docs/sdk-reference/desktop-python-sdk/v1.0.1/sandbox/index.mdx
---
title: Sandbox
---






## Sandbox

```python Python
class Sandbox(SandboxBase)
```


### get\_video\_stream\_url

```python Python
def get_video_stream_url()
```

Get the video stream URL.


### take\_screenshot

```python Python
@overload
def take_screenshot(format: Literal["stream"]) -> Iterator[bytes]
```

Take a screenshot and return it as a stream of bytes.


### take\_screenshot

```python Python
@overload
def take_screenshot(format: Literal["bytes"]) -> bytearray
```

Take a screenshot and return it as a bytearray.


### take\_screenshot

```python Python
def take_screenshot(format: Literal["bytes", "stream"] = "bytes")
```

Take a screenshot and return it in the specified format.

**Arguments**:

- `format`: The format of the screenshot. Can be 'bytes', 'blob', or 'stream'.

**Returns**:

The screenshot in the specified format.


### left\_click

```python Python
def left_click()
```

Left click on the current mouse position.


### double\_click

```python Python
def double_click()
```

Double left click on the current mouse position.


### right\_click

```python Python
def right_click()
```

Right click on the current mouse position.


### middle\_click

```python Python
def middle_click()
```

Middle click on the current mouse position.


### scroll

```python Python
def scroll(amount: int)
```

Scroll the mouse wheel by the given amount.

**Arguments**:

- `amount`: The amount to scroll.


### move\_mouse

```python Python
def move_mouse(x: int, y: int)
```

Move the mouse to the given coordinates.

**Arguments**:

- `x`: The x coordinate.
- `y`: The y coordinate.


### get\_cursor\_position

```python Python
def get_cursor_position()
```

Get the current cursor position.

**Returns**:

A tuple with the x and y coordinates.


### get\_screen\_size

```python Python
def get_screen_size()
```

Get the current screen size.

**Returns**:

A tuple with the width and height.


### write

```python Python
def write(text: str)
```

Write the given text at the current cursor position.

**Arguments**:

- `text`: The text to write.


### press

```python Python
def press(key: str)
```

Press a key.

**Arguments**:

- `key`: The key to press (e.g. "enter", "space", "backspace", etc.).


### hotkey

```python Python
def hotkey(*keys)
```

Press a hotkey.

**Arguments**:

- `keys`: The keys to press (e.g. `hotkey("ctrl", "c")` will press Ctrl+C).


### open

```python Python
def open(file_or_url: str)
```

Open a file or a URL in the default application.

**Arguments**:

- `file_or_url`: The file or URL to open.

